--- a/index.template.ejs
+++ b/index.template.ejs
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
     <link rel='icon' type='image/png' href='/favicon-16x16.png'>
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <% if (head) { %>
       <%- head %>
     <% } else { %>
@@ -12,9 +12,10 @@
     <% } %>
 
     <%- style %>
+
+    <%- script %>
   </head>
   <body>
     <%- html %>
-    <%- script %>
   </body>
 </html>
