--- a/index.template.ejs
+++ b/index.template.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width,initial-scale=1'>
+    <meta name="Description" content="Documentation site for Svelte Server">
     <link rel='icon' type='image/png' href='/favicon-16x16.png'>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <% if (head) { %>
